# SM-Manager

./: CMakeLists.txt  README.md  main.cpp  modpacks.txt
include/: cmd.hpp  commands.hpp  init.hpp
src/: cmd.cpp  commands.cpp  init.cpp
